--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,13 @@
     <ul>
       <li>
         <em>
-          Flat no A1202, Cozy Homes,<br>
-          Awhalwadi Road, Wagholi.<br>
-          PUNE-411207
+          Flat no 111111, Homes,<br>
+          Abc Road, mango.<br>
+          Fruits-415263588522
         </em>
       </li>
-      <li>Tel No- 9307388658</li>
-      <li>Email- sonals9996@gmail.com</li>
+      <li>Tel No- 985624785695855222</li>
+      <li>Email- sonijyt4857522@gdgl.com</li>
     </ul>
 
     <form action="mailto:joe@example.com" method="post" enctype="text/plain">
